--- a/index.html
+++ b/index.html
@@ -27,22 +27,14 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Techie - v4.9.0
-  * Template URL: https://bootstrapmade.com/techie-free-skin-bootstrap-3/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
 
-  <!-- ======= Header ======= -->
+  <!-- ======= .Barra de navegação ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
       <h1 class="logo"><a href="index.html">SUN STORE</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -53,12 +45,12 @@
           <li><a class="getstarted scrollto" href="#about">Contrate agora!</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav><!-- .Barra de navegação -->
 
     </div>
-  </header><!-- End Header -->
+  </header><!-- Fim da barra -->
 
-  <!-- ======= Hero Section ======= -->
+  <!-- ======= INICIO ======= -->
   <section id="hero" class="d-flex align-items-center">
 
     <div class="container-fluid" data-aos="fade-up">
@@ -74,11 +66,11 @@
       </div>
     </div>
 
-  </section><!-- End Hero -->
+  </section><!-- INICIO -->
 
   <main id="main">
 
-    <!-- ======= About Section ======= -->
+    <!-- ======= Sobre ======= -->
     <section id="about" class="about">
       <div class="container">
 
@@ -101,9 +93,9 @@
         </div>
 
       </div>
-    </section><!-- End About Section -->
+    </section><!-- Sobre -->
 
-    <!-- ======= Counts Section ======= -->
+    <!-- ======= Contas ======= -->
     <section id="counts" class="counts">
       <div class="container">
 
@@ -132,9 +124,9 @@
         </div>
 
       </div>
-    </section><!-- End Counts Section -->
+    </section><!-- Contas -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Serviços ======= -->
     <section id="services" class="services section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -225,9 +217,9 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section><!-- Serviços -->
 
-    <!-- ======= Features Section ======= -->
+    <!-- ======= Vamtagens ======= -->
     <section id="features" class="features">
       <div class="container" data-aos="fade-up">
 
@@ -265,9 +257,9 @@
         </div>
 
       </div>
-    </section><!-- End Features Section -->
+    </section><!-- Vamtagens -->
 
-    <!-- ======= Testimonials Section ======= -->
+    <!-- ======= End Avaliações ======= -->
     <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -290,7 +282,7 @@
                 <h3>Zé pedrin</h3>
                 <h4>Cliente </h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- End Avaliações -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -303,7 +295,7 @@
                 <h3>Carla rusbê</h3>
                 <h4>Cliente</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- End Avaliações -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -316,7 +308,7 @@
                 <h3>Secretária executiva</h3>
                 <h4>Cliente</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- End Avaliações -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -329,7 +321,7 @@
                 <h3>Jhonatan</h3>
                 <h4>Cliente</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- End Avaliações -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -342,19 +334,16 @@
                 <h3>Roberto</h3>
                 <h4>Cliente</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- End Avaliações -->
 
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section><!-- End Avaliações -->
 
-
-    </section><!-- End Portfolio Section -->
-
-    <!-- ======= Pricing Section ======= -->
+    <!-- ======= Preços ======= -->
     <section id="pricing" class="pricing section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -438,9 +427,9 @@
         </div>
 
       </div>
-    </section><!-- End Pricing Section -->
+    </section><!-- Preços -->
 
-    <!-- ======= Frequently Asked Questions Section ======= -->
+    <!-- ======= PERGUNTAS ======= -->
     <section id="faq" class="faq">
       <div class="container" data-aos="fade-up">
 
@@ -500,9 +489,9 @@
         </div>
 
       </div>
-    </section><!-- End Frequently Asked Questions Section -->
+    </section><!-- PERGUNTAS -->
 
-    <!-- ======= Contact Section ======= -->
+    <!-- ======= Contato ======= -->
     <section id="contact" class="contact section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -516,7 +505,7 @@
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
               <h3>Indereço</h3>
-              <p>Rua tribuna 103, Uberlândia, Minas Gerais</p>
+              <p>Uberlândia - MG</p>
             </div>
           </div>
 
@@ -532,7 +521,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-phone-call"></i>
               <h3>Numero:</h3>
-              <p>+55 34 99888-0187</p>
+              <p>+55 34 99888-****</p>
             </div>
           </div>
 
@@ -541,7 +530,7 @@
         <div class="row">
 
           <div class="col-lg-6 ">
-            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3773.373217152766!2d-48.24192967433221!3d-18.959117872645134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94a45008501088d5%3A0x3869663ea54e2d6c!2sR.%20Tribuna%2C%20103%20-%20Laranjeiras%2C%20Uberl%C3%A2ndia%20-%20MG%2C%2038410-532!5e0!3m2!1spt-BR!2sbr!4v1669679894021!5m2!1spt-BR!2sbr" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241550.26447449665!2d-48.55067019259035!3d-18.92152622038301!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94a4450c10bbbaef%3A0xae370c93616d5c9c!2zVWJlcmzDom5kaWEsIE1H!5e0!3m2!1spt-BR!2sbr!4v1673725622574!5m2!1spt-BR!2sbr" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
           </div>
 
           <div class="col-lg-6">
@@ -572,11 +561,11 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section><!-- Contato -->
 
-  </main><!-- End #main -->
+  </main><!--Fim -->
 
-  <!-- ======= Footer ======= -->
+  <!-- ======= Rodapé ======= -->
   <footer id="footer">
 
     <div class="footer-top">
@@ -586,10 +575,10 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Endereço</h3>
             <p>
-              Rua tribuna <br>
+               <br>
               Uberlãndia, Minas Gerais<br>
               Brasil <br><br>
-              <strong>Numero::</strong> +55 34 9 9888-0187<br>
+              <strong>Numero::</strong><br>
               <strong>Email:</strong> marcosnakano12@gmai.com<br>
             </p>
           </div>
@@ -636,10 +625,6 @@
             &copy; Copyright <strong><span>Sunn</span></strong>. Todos direitos reservados.
           </div>
           <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/techie-free-skin-bootstrap-3/ -->
             Desenvolvido por: <a href="Dev">Marcos Gabriel Nakano de S.</a>
           </div>
         </div>
@@ -653,7 +638,7 @@
       </div>
 
     </div>
-  </footer><!-- End Footer -->
+  </footer><!-- Fim rodapé -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   <div id="preloader"></div>
