--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
 
-  <!-- ======= .Barra de navegação ======= -->
+  <!-- ======= .Barra de navgação ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
       <h1 class="logo"><a href="index.html">SUN STORE</a></h1>
